# PoseCoachAI-CNN-BiLSTM-pose-classifier

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
app/: camera.py  main.py
model/: dataset_check.ipynb  eval_confusion_cnn.py  eval_confusion_lstm.py  exercise_lstm.pt  exercise_lstm01.pt  exercise_lstm02.pt  train_coach_cnn.py  train_exercise_classifier.py
posecoach/: tts.py
posecoach/coaching/: coaching_rules.py  phase_detectors.py  summary.py  tip_aggregator.py
posecoach/inference/: engine.py
posecoach/vision/: pose_utils.py
scripts/: compute_angles.py  data_vis.py  dataset_download.py  extract_keypoints.py  fetch_videos.py  make_manifest.py  preprocess_video.py  window_video_sequences.py
ui/: app.py  coaching_rules.py  live_streamlit.py  overlay_processor.py  streamlit_app.py  tts.py
ui/components/: browser_tts.html
