[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posecoach"
version = "0.1.0"
description = "Core library for PoseCoachAI (inference, vision, coaching, TTS)"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["posecoach*"]
